Remove collection_name field from rag-server (#172)
* Remove collection_name field from rag-server

* Update openapi schema for rag-server

* Fix unittest
